--- a/mvc-netcore-minimal/Views/Shared/_Layout.cshtml
+++ b/mvc-netcore-minimal/Views/Shared/_Layout.cshtml
@@ -21,10 +21,12 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                    <span class="sr-only">Menu</span>
+                        <!-- hamburger: -->
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <!--/hamburger -->
                 </button>
                 <a asp-controller="Home" asp-action="Index" class="navbar-brand">WebApplication</a>
             </div>
